# v8_cmake_minimal

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
v8/: CMakeLists.txt
